fix overlay img z-index

--- a/assets/scss/components/_main-page.scss
+++ b/assets/scss/components/_main-page.scss
@@ -51,7 +51,7 @@
   }
   &-img{
     width: 84px;
-    z-index: 1;
+    z-index: 2;
   }
   &-img-shadow{
     filter: drop-shadow(5px 10px 4px rgba(0,0,0, .2));
